--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-02-07 01:04+0300\n"
-"PO-Revision-Date: 2024-02-07 01:04+0300\n"
+"POT-Creation-Date: 2024-02-07 02:04+0300\n"
+"PO-Revision-Date: 2024-02-07 02:04+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.14.0\n"
 
 msgid "home_title"
 msgstr "Bienvenue chez Holberton"
@@ -32,3 +32,4 @@ msgstr "Vous n'êtes pas connecté."
 
 msgid "current_time_is"
 msgstr "Nous sommes le %(current_time)s."
+
